# app/Http/Controllers/ProfileController.php
@@ -9,6 +9,21 @@ use Illuminate\Support\Facades\Auth;
 use Illuminate\Support\Facades\Redirect;
 use Illuminate\View\View;
 
+/**
+ * @OA\Schema(
+ *     schema="Profile",
+ *     type="object",
+ *     required={"name", "email"},
+ *     @OA\Property(property="user_id", type="integer", description="ID de l'utilisateur"),
+ *     @OA\Property(property="username", type="string", description="Nom de l'utilisateur"),
+ *     @OA\Property(property="email", type="string", format="email", description="Email de l'utilisateur"),
+ *     @OA\Property(property="password", type="string", format="password", description="Mot de passe de l'utilisateur"),
+ *     @OA\Property(property="created_at", type="string", format="date-time", description="Date de création du profil"),
+ *     @OA\Property(property="updated_at", type="string", format="date-time", description="Date de mise à jour du profil")
+ * )
+ */
+
+
 class ProfileController extends Controller
 {
     /**
